feat(Global UI): :sparkles: Add dark mode switching feature and background effect options
Dark mode and diverse background styles are available through the appearance settings

--- a/src/components/home/homeStyle.css
+++ b/src/components/home/homeStyle.css
@@ -67,7 +67,7 @@
     background: var(--transparent-lightgrey);
     border: none;
     border-radius: 0.75rem;
-    box-shadow: 0 0 3px var(--default-lightgrey);
+    box-shadow: 0 0 3px var(--interface-background-grey);
 
     transition: all 200ms ease-in-out;
 }
