--- a/src/components/search/searchStyle.css
+++ b/src/components/search/searchStyle.css
@@ -14,7 +14,7 @@
     width: 100%;
     height: 3rem;
 
-    background: var(--default-lightgrey);
+    background: var(--interface-background-grey);
     border: none;
     border-radius: 1.5rem;
 
@@ -32,13 +32,16 @@
 
     background: transparent;
     border: none;
-    color: var(--default-black);
+    color: var(--interface-foreground);
 
     font-size: 15pt;
 
     outline: none;
 
     flex: 1 0;
+}
+#searchBar::-webkit-input-placeholder {
+    color: var(--interface-foreground);
 }
 #searchClear {
     opacity: 0;
@@ -97,7 +100,7 @@
     width: 6rem;
     height: 2.5rem;
 
-    background: var(--default-lightgrey);
+    background: var(--interface-background-grey);
     border: none;
     border-radius: 8px;
 
@@ -112,7 +115,7 @@
     transform: scale(1.1);
 }
 .listButton > label {
-    color: var(--default-black);
+    color: var(--interface-foreground);
     transition: all 200ms ease-in-out;
 }
 .listButton:hover > label {
