--- a/src/components/search/searchStyle.css
+++ b/src/components/search/searchStyle.css
@@ -14,9 +14,10 @@
     width: 100%;
     height: 3rem;
 
-    background: var(--interface-background-grey);
+    background: var(--interface-transparent-grey);
     border: none;
     border-radius: 1.5rem;
+    backdrop-filter: blur(4px);
 
     padding-left: 1rem;
     padding-right: 3px;
@@ -100,7 +101,7 @@
     width: 6rem;
     height: 2.5rem;
 
-    background: var(--interface-background-grey);
+    background: var(--interface-transparent-grey);
     border: none;
     border-radius: 8px;
 
