feat(Lyrics display): :sparkles: Add lyrics background effect options
Different background effects of the lyrics panel: blured cover, dynamic color spots and theme following are available through the option in settings

--- a/src/components/lyrics/lyricsStyle.css
+++ b/src/components/lyrics/lyricsStyle.css
@@ -4,19 +4,30 @@
     align-items: center;
 }
 
-/* 动态背景 */
-#dynamicBackgroundContainer{
+/* 背景 */
+#backgroundContainer{
     width: 100%;
     height: 100%;
     position: absolute;
 
-    background: transparent;
+    background-image: transparent;
+    background-size: cover;
+    background-position: center;
 
     z-index: -1;
 }
 #dynamicBackground {
     width: 100%;
     height: 100%;
+}
+#backgroundBlurMask {
+    width: 100%;
+    height: 100%;
+
+    background: transparent;
+    backdrop-filter: 
+        blur(24px)
+        brightness(0.85);
 }
 
 /* 顶栏 */
