--- a/src/components/lyrics/lyricsStyle.css
+++ b/src/components/lyrics/lyricsStyle.css
@@ -280,6 +280,7 @@
     display: none;
 }
 
+/* 歌词容器框 */
 .lyricsBox {
     max-width: 100%;
 
@@ -290,25 +291,39 @@
     border: none;
     border-radius: 15px;
 
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
     transition: all 300ms ease-in-out;
 }
 .lyricsBox:hover {
     background: var(--transparent-grey);
 }
 .lyricsBox > ul {
+    text-align: left;
+
+    margin: 2px 0;
+}
+.lyricsBox > ul {
     color: var(--transparent-grey);
 
     transition: all 300ms ease-in-out;
 }
-.lyricsBox.glow > ul {
-    text-shadow: 0 0 2px var(--transparent-grey);
-}
 .lyricsBox.focused > ul {
     color: var(--default-white);
+}
+/* 发光效果 */
+.lyricsBox.glow > ul {
+    text-shadow: 0 0 2px var(--transparent-grey);
 }
 .lyricsBox.glow.focused > ul {
     text-shadow: 0 0 3px var(--default-white);
 }
-.lyricsBox > ul {
-    margin: 0;
+/* 简约样式 */
+.lyricsBox.lite {
+    align-items: center;
+}
+.lyricsBox.lite > ul {
+    text-align: center;
 }
