fix(Lyrics display): :bug: 修复了歌词动态背景闪烁的问题
修复了歌词面板动态背景闪烁的问题

--- a/src/components/lyrics/lyricsStyle.css
+++ b/src/components/lyrics/lyricsStyle.css
@@ -272,6 +272,7 @@
 
     justify-content: left;
     margin-left: 5%;
+    padding-bottom: 20rem;
 
     overflow-x: hidden;
     overflow-y: auto;
