feat(Library page): :zap: 添加收藏卡片背景自适应深色主题功能

--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -588,7 +588,7 @@ img.outlineImage {
     width: calc(24rem - 12px);
     height: 100%;
 
-    background: var(--theme-color-light);
+    background: var(--interface-background);
     box-shadow: 0 4px 4px 2px var(--transparent-grey);
 
     padding: 0 6px;
