--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -442,7 +442,7 @@ img.outlineImage {
 
 .pageButton {
     width: 3rem;
-    height: 3rem;
+    height: 4.5rem;
 
     background: transparent;
     border: none;
@@ -456,19 +456,9 @@ img.outlineImage {
         justify-content 0ms ease-in-out 200ms;
 
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-.pageButton:hover {
-    width: 8rem;
-
-    background: var(--theme-background);
-
-    justify-content: flex-start;
-}
-.pageButton.current {
-    background: var(--theme-color-default);
 }
 .pageButton > img {
     width: 3rem;
@@ -478,10 +468,20 @@ img.outlineImage {
     border-radius: 1.5rem;
 }
 .pageButton > label {
-    display: none;
+    font-size: 8pt;
 }
-.pageButton:hover > label {
-    display: inline;
+/* 当前页面指示器 */
+#pageIndicator {
+    position: absolute;
+    width: 3rem;
+    height: 4.5rem;
+    top: 5rem;
+    left: 0.5rem;
+
+    background: var(--theme-color-default);
+    border-radius: 1.5rem;
+
+    transition: all 150ms ease-out;
 }
 
 #topBarSpace {
