--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -457,8 +457,13 @@ img.outlineImage {
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+}
+.pageButton:hover {
+    background: var(--transparent-grey);
+}
+.pageButton.current {
+    background: var(--theme-color-default);
 }
 .pageButton > img {
     width: 3rem;
@@ -469,19 +474,6 @@ img.outlineImage {
 }
 .pageButton > label {
     font-size: 8pt;
-}
-/* 当前页面指示器 */
-#pageIndicator {
-    position: absolute;
-    width: 3rem;
-    height: 4.5rem;
-    top: 5rem;
-    left: 0.5rem;
-
-    background: var(--theme-color-default);
-    border-radius: 1.5rem;
-
-    transition: all 150ms ease-out;
 }
 
 #topBarSpace {
@@ -504,14 +496,6 @@ img.outlineImage {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-#settings:hover,
-#accounts:hover {
-    background: var(--transparent-grey);
-}
-#settings.current,
-#accounts.current {
-    background: var(--theme-color-default);
 }
 #settings > img {
     width: 3rem;
