fix(Global UI): :bug: 修复页面焦点动画
焦点页面的动画指示在调整后无法正常显示, 此更改修复了该问题

--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -497,6 +497,10 @@ img.outlineImage {
     justify-content: center;
     align-items: center;
 }
+#settings.current,
+#accounts.current {
+    background: var(--theme-color-default);
+}
 #settings > img {
     width: 3rem;
     height: 3rem;
