fix(Songlist / Album page): :bug: 修复了歌单内容中歌曲名称显示不全的问题
歌单详情界面中歌曲信息由于使用与歌曲卡片相同的截取方式而显示不全, 本更改修复了这一问题

--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -785,7 +785,7 @@ img.outlineImage {
 .songCard > .songInfo {
     align-items: flex-start;
 }
-.songInfo > label {
+.songCard > .songInfo > label {
     width: 10rem;
     height: 16pt;
     overflow: hidden;
