--- a/src/components/captions/captionsStyle.css
+++ b/src/components/captions/captionsStyle.css
@@ -77,6 +77,7 @@
 }
 
 #currentLyricsBox {
+    width: 100%;
     background: transparent;
     border: none;
     border-radius: 15px;
@@ -96,7 +97,8 @@
     margin: 4px 0;
     padding: 0;
 
-    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 #currentLyricsBox > ul.large {
     height: 30pt;
