feat(Global UI): :ambulance: 更新了各页面及设置界面按钮的图标

--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -497,6 +497,10 @@ img.outlineImage {
     justify-content: center;
     align-items: center;
 }
+#settings:hover,
+#accounts:hover {
+    background: var(--transparent-grey);
+}
 #settings.current,
 #accounts.current {
     background: var(--theme-color-default);
